# safevixai

./: .codacy.yml  .editorconfig  .gitignore  .gitleaks.toml  .graphifyignore  .pa11yci.json  .pre-commit-config.yaml  .prettierrc  .trivyignore  .vercelignore  404.html  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_STATUS.md  CONTRIBUTING.md  DESIGN.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SETUP.md  SKILL.md  SUPPORT.md  SafeVixAI_MASTER.docx  TESTING_POLICY.md  alert_service.py  docker-compose.prod.yml  docker-compose.yml  fix_ui.js  index.html  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-render.txt  requirements.txt
backend/api/: __init__.py  deprecation.py
backend/core/: audit.py  circuit_breaker.py  config.py  database.py  i18n_middleware.py  idempotency.py  jwks.py  limiter.py  metrics.py  queue.py  rbac.py  redis_client.py  response_cache.py  response_wrapper.py  security.py  service_tracing.py  structured_logging.py  telemetry.py  tenant.py  tracing.py  versioning.py
backend/i18n/: locales.py
backend/middleware/: allowed_hosts.py  compression.py  query_profiler.py
backend/migrations/: env.py  supabase_rls_indexes.sql
backend/models/: __init__.py  admin_boundary.py  challan.py  complaint_event.py  emergency.py  etl_run_log.py  gov_dataset.py  grievance.py  lgd_entity.py  municipal_feature.py  municipality.py  officer.py  osm_civic_feature.py  road_issue.py  schemas.py  sos_incident.py  streetlight_pole.py  user.py  ward.py
backend/services/: __init__.py  ai_verification.py  authority_router.py  challan_dispute_service.py  challan_service.py  complaint_cluster.py  complaint_lifecycle.py  complaint_state_machine.py  data_retention.py  duplicate_detector.py  emergency_locator.py  escalation_predictor.py  event_bus.py  exceptions.py  fine_prediction_service.py  fraud_detector.py  garage_service.py  geo_verifier.py  geocoding_service.py  llm_service.py  local_emergency_catalog.py  officer_route_optimizer.py  osm_contributor.py  overpass_service.py  report_classifier.py  roadwatch_service.py  routing_service.py  safe_routing.py  safe_spaces.py  sla_monitor.py  sla_notification.py  streetlight_service.py  ward_service.py  workload_balancer.py
backend/tests/: conftest.py  test_ai_verification.py  test_auth.py  test_authority_router.py  test_challan.py  test_challan_dispute_service.py  test_chat_flow.py  test_chatbot.py  test_circuit_breaker.py  test_complaint_cluster.py  test_complaint_lifecycle.py  test_complaint_state_machine.py  test_compression.py  test_config.py  test_core_circuit_breaker.py  test_core_config.py  test_core_i18n_middleware.py  test_core_jwks.py  test_core_limiter.py  test_core_queue.py  test_core_redis_client.py  (+66 more)
chatbot_service/: .dockerignore  .env.example  .gitignore  Dockerfile  alert_service.py  config.py  conftest.py  limiter.py  main.py  pyproject.toml  pytest.ini  render.yaml  requirements-render.txt  requirements.txt
(+1889 files in other folders)
