# SPDX-License-Identifier: MIT
# Copyright (c) 2026 SafeVixAI Team
[project]
name = "safevixai"
version = "1.0.0"
description = "SafeVixAI — AI Emergency Response + DriveLegal + RoadWatch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SafeVixAI Team", email = "safevixai@googlegroups.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "EM", "G", "PIE", "T20"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.ruff.format]
quote-style = "double"
